# SimpleBLE

./: README.rst  pyproject.toml  setup.py
.github/actions/build-dbus/: action.yml
.github/actions/build-expat/: action.yml
.github/actions/build-gtest/: action.yml
.github/actions/setup-cmake/: action.yml
.github/workflows/: ci_build_examples.yml  ci_docs.yml  ci_lint.yml  ci_linux.yml  ci_macos.yml  ci_main.yml  ci_python.yml  ci_rust_build.yml  ci_test.yml  ci_wheels.yml  ci_windows.yml
.github/workflows/old/: ci_cpp_release_test.yml  ci_py_release_test.yml  ci_test_hil.yaml
examples/simpleble/cpp/common/: utils.cpp  utils.hpp
examples/simpleble/cpp/read/: read.cpp
examples/simpleble/cpp/write/: write.cpp
examples/simplepyble/: read.py
scripts/: check_version.sh
simpleble/: CMakeLists.txt
simpleble/include/simpleble/: Adapter.h  Peripheral.h  Types.h
simpleble/src/: Exceptions.cpp
simpleble/src/backends/linux/: Bluez.h
simpleble/src/backends/macos/: AdapterBase.h  Utils.mm
simpleble/src/backends/plain/: PeripheralBase.cpp
simpleble/src/backends/windows/: AdapterBase.h
simpleble/test/hil/: environment.hpp  main.cpp  test_api.cpp
simpleble/test/src/: test_uuid.cpp
simplebluez/include/simplebluez/: Adapter.h  Characteristic.h  Descriptor.h  Device.h  Service.h  Types.h
simplebluez/include/simplebluez/interfaces/: Adapter1.h  Agent1.h  Device1.h  GattCharacteristic1.h  GattDescriptor1.h  GattService1.h
simplebluez/src/: Characteristic.cpp  Descriptor.cpp  Device.cpp  Service.cpp
simplebluez/src/interfaces/: Device1.cpp  GattCharacteristic1.cpp  GattDescriptor1.cpp  GattService1.cpp
simpledbus/include/simpledbus/base/: Connection.h
simpledut/: Cargo.toml
simpledut/.devcontainer/: devcontainer.json
simpledut/.github/workflows/: rust_ci.yml
simpledut/docs/: README.md
simpledut/scripts/: flash.sh
simpledut/src/: main.rs
simpledut2/: CMakeLists.txt
simpledut2/include/: GattBase.h  ProfileBase.h  SimpleDutBase.h
simpledut2/src/: main.cpp
simpledut2/src/port/esp32/: Gatt.h  SimpleDut.h  port.cmake  sdkconfig  sdkconfig.old
simpledut2/src/port/esp32/main/: gatts_demo.c
simpledut2/src/port/plain/: Gatt.h  Profiles.h  SimpleDut.h
simplepyble/: requirements.txt
simplepyble/src/: wrap_characteristic.cpp  wrap_descriptor.cpp  wrap_service.cpp
