[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "ninja; platform_system!='Windows'",
    "cmake>=3.21",
    "pybind11",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.4.dev42+ge174a1f

dirty = "{base_version}+d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# Example formatted version: 1.2.4.dev42+ge174a1f.d20230922